--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,9 @@
 <div class="flex flex-col justify-between min-h-dvh">
 
-<div class="flex-grow-1">
-    <router-outlet></router-outlet>
-</div>
-   
-
-
-
-
+    <div class="flex-grow-1 mt-24">
+        <router-outlet></router-outlet>
+    </div>
 
     <app-footer></app-footer>
 </div>
+<ngx-spinner bdColor = "rgba(255, 255, 255, 0.8)" size = "medium" color = "#11cc00" type = "ball-atom" [fullScreen] = "true"><p style="color: white" >  </p></ngx-spinner>
