--- a/src/app/auth/pages/sign-in/sign-in.component.html
+++ b/src/app/auth/pages/sign-in/sign-in.component.html
@@ -1,1 +1,127 @@
-<p>sign-in works!</p>
+<div class="container mx-auto">
+
+
+
+    <div class="signUp-Form my-8 ">
+        <form [formGroup]="signInForm" class=" mx-auto rounded-lg shadow-lg p-10  max-w-xl ">
+            <p class="title my-6">Sign In</p>
+
+
+            <!-- & Email -->
+            <div class="relative z-0 w-full mb-5 group">
+                <input type="email" name="floating_email" id="floating_email"
+                    class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:border-gray-600 dark:focus:border-green-600 focus:outline-none focus:ring-0 focus:border-green-600 peer  "
+                    placeholder=" " required autocomplete="email" formControlName="email" />
+                <label for="floating_email"
+                    class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto peer-focus:text-green-600 peer-focus:dark:text-green-600 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Email
+                    address</label>
+
+                <!--! Error -->
+                @let emailControl=signInForm.get('email');
+                @if(emailControl?.errors && emailControl?.touched){
+                <div role="alert"
+                    class="bg-red-100 my-3 dark:bg-red-700 border-l-4 border-red-500 dark:border-red-400 text-red-900 dark:text-red-100 p-2 rounded-lg flex items-center transition duration-300 ease-in-out hover:bg-red-200 dark:hover:bg-red-800 transform hover:scale-105">
+                    <svg stroke="currentColor" viewBox="0 0 24 24" fill="none"
+                        class="h-5 w-5 flex-shrink-0 mr-2 text-red-400" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M13 16h-1v-4h1m0-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" stroke-width="2"
+                            stroke-linejoin="round" stroke-linecap="round"></path>
+                    </svg>
+                    @if(emailControl?.getError('required')){
+                    <p class="text-xs font-semibold">
+                        Email is required
+                    </p>
+                    }
+                    <!-- @else if(emailControl?.getError('email')){
+                    <p class="text-xs font-semibold">
+                        Enter a valid email
+                    </p>
+                    } -->
+
+                </div>
+
+                }
+            </div>
+
+            <!-- & Pass -->
+            <div class="relative z-0 w-full mb-5 group">
+                <input type="password" name="floating_password" id="floating_password"
+                    class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:border-gray-600 dark:focus:border-green-600 focus:outline-none focus:ring-0 focus:border-green-600 peer"
+                    placeholder=" " required autocomplete="new-password" formControlName="password" />
+                <label for="floating_password"
+                    class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-green-600 peer-focus:dark:text-green-600 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Password</label>
+                <!--! Error -->
+                @let passControl=signInForm.get('password');
+                @if(passControl?.errors && passControl?.touched){
+                <div role="alert"
+                    class="bg-red-100 my-3 dark:bg-red-700 border-l-4 border-red-500 dark:border-red-400 text-red-900 dark:text-red-100 p-2 rounded-lg flex items-center transition duration-300 ease-in-out hover:bg-red-200 dark:hover:bg-red-800 transform hover:scale-105">
+                    <svg stroke="currentColor" viewBox="0 0 24 24" fill="none"
+                        class="h-5 w-5 flex-shrink-0 mr-2 text-red-400" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M13 16h-1v-4h1m0-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" stroke-width="2"
+                            stroke-linejoin="round" stroke-linecap="round"></path>
+                    </svg>
+                    @if(passControl?.getError('required')){
+                    <p class="text-xs font-semibold">
+                        Password is required
+                    </p>
+                    }
+                    <!-- @else if(passControl?.getError('pattern')){
+                    <p class="text-xs font-semibold">
+                        Password must be at least 7 letters and must start with upperCase
+                    </p>
+                    } -->
+                </div>
+                }
+            </div>
+
+
+
+            <!-- & Btn Submit -->
+            <button [disabled]="isLoading" type="button" (click)="onSubmit()"
+                class="disabled:!bg-green-400 disabled:!cursor-progress text-white bg-green-600 block mx-auto  hover:bg-green-900   font-medium rounded-lg text-sm w-60 my-4 px-5 py-2.5 text-center">
+                @if(isLoading){
+                <i class="fas fa-spin fa-spinner"></i>
+                }@else {
+                Sign In
+                }
+            </button>
+            <div class="text-center">
+                <a [routerLink]="['/forget']" class="text-gray-600 m-5 text-sm text-center font-medium hover:text-red-600" >Forget Password ?</a>
+
+            </div>
+
+
+
+
+
+            <!--& Erorr and Success msg  -->
+            @if(errorMessage.length>0){
+            <div role="alert"
+                class="bg-red-100 my-3 dark:bg-red-700 border-l-4 border-red-500 dark:border-red-400 text-red-900 dark:text-red-100 p-2 rounded-lg flex items-center transition duration-300 ease-in-out hover:bg-red-200 dark:hover:bg-red-800 transform hover:scale-105">
+                <svg stroke="currentColor" viewBox="0 0 24 24" fill="none"
+                    class="h-5 w-5 flex-shrink-0 mr-2 text-red-400" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M13 16h-1v-4h1m0-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" stroke-width="2"
+                        stroke-linejoin="round" stroke-linecap="round"></path>
+                </svg>
+                <p class="text-xs font-semibold">
+                    {{errorMessage}}
+                </p>
+            </div>
+            }
+            @if(successMessage.length>0){
+
+
+            <div role="alert"
+                class="bg-green-100 dark:bg-green-600 border-l-4 border-green-500 dark:border-green-500 text-green-900 dark:text-green-100 p-2 rounded-lg flex items-center transition duration-300 ease-in-out hover:bg-green-200 dark:hover:bg-green-800 transform hover:scale-105">
+                <svg stroke="currentColor" viewBox="0 0 24 24" fill="none"
+                    class="h-5 w-5 flex-shrink-0 mr-2 text-green-400" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M13 16h-1v-4h1m0-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" stroke-width="2"
+                        stroke-linejoin="round" stroke-linecap="round"></path>
+                </svg>
+                <p class="text-xs font-semibold">{{successMessage}}</p>
+            </div>
+
+            }
+
+        </form>
+    </div>
+</div>
