--- a/src/app/auth/pages/sign-up/sign-up.component.html
+++ b/src/app/auth/pages/sign-up/sign-up.component.html
@@ -1,1 +1,224 @@
-<p>sign-up works!</p>
+<div class="container mx-auto">
+
+
+
+    <div class="signUp-Form my-8 ">
+        <form [formGroup]="signUpForm" class=" mx-auto rounded-lg shadow-lg p-10  max-w-xl ">
+            <p class="title my-6">Register </p>
+
+            <!-- & Name -->
+            <div class="relative z-0 w-full mb-5 group">
+                <input type="text" name="floating_first_name" id="floating_first_name"
+                    class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none  dark:border-gray-600 dark:focus:border-green-600 focus:outline-none focus:ring-0 focus:border-green-600 peer"
+                    placeholder=" " formControlName="name" />
+                <label for="floating_first_name"
+                    class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-green-600 peer-focus:dark:text-green-600 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">
+                    Name</label>
+                <!--! Error -->
+                @let nameControl=signUpForm.get('name');
+                @if(nameControl?.errors && nameControl?.touched){
+                <div role="alert"
+                    class="bg-red-100 my-3 dark:bg-red-700 border-l-4 border-red-500 dark:border-red-400 text-red-900 dark:text-red-100 p-2 rounded-lg flex items-center transition duration-300 ease-in-out hover:bg-red-200 dark:hover:bg-red-800 transform hover:scale-105">
+                    <svg stroke="currentColor" viewBox="0 0 24 24" fill="none"
+                        class="h-5 w-5 flex-shrink-0 mr-2 text-red-400" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M13 16h-1v-4h1m0-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" stroke-width="2"
+                            stroke-linejoin="round" stroke-linecap="round"></path>
+                    </svg>
+                    @if(nameControl?.getError('required')){
+                    <p class="text-xs font-semibold">
+                        Name is required
+                    </p>
+                    }@else if(nameControl?.getError('minlength')){
+                    <p class="text-xs font-semibold">
+                        Name must be at least 3 characters
+                    </p>
+                    }@else if (nameControl?.getError('maxlength')){
+                    <p class="text-xs font-semibold">
+                        Name must be at most 20 characters
+                    </p>
+                    }
+                </div>
+                }
+            </div>
+
+            <!-- & Email -->
+            <div class="relative z-0 w-full mb-5 group">
+                <input  type="email" name="floating_email" id="floating_email"
+                    class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:border-gray-600 dark:focus:border-green-600 focus:outline-none focus:ring-0 focus:border-green-600 peer  "
+                    placeholder=" " required autocomplete="email" formControlName="email" />
+                <label for="floating_email"
+                    class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto peer-focus:text-green-600 peer-focus:dark:text-green-600 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Email
+                    address</label>
+
+                <!--! Error -->
+                @let emailControl=signUpForm.get('email');
+                @if(emailControl?.errors && emailControl?.touched){
+                <div role="alert"
+                    class="bg-red-100 my-3 dark:bg-red-700 border-l-4 border-red-500 dark:border-red-400 text-red-900 dark:text-red-100 p-2 rounded-lg flex items-center transition duration-300 ease-in-out hover:bg-red-200 dark:hover:bg-red-800 transform hover:scale-105">
+                    <svg stroke="currentColor" viewBox="0 0 24 24" fill="none"
+                        class="h-5 w-5 flex-shrink-0 mr-2 text-red-400" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M13 16h-1v-4h1m0-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" stroke-width="2"
+                            stroke-linejoin="round" stroke-linecap="round"></path>
+                    </svg>
+                    @if(emailControl?.getError('required')){
+                    <p class="text-xs font-semibold">
+                        Email is required
+                    </p>
+                    }@else if(emailControl?.getError('email')){
+                    <p class="text-xs font-semibold">
+                        Enter a valid email
+                    </p>
+                    }
+
+                </div>
+
+                }
+            </div>
+
+            <!-- & Pass -->
+            <div class="relative z-0 w-full mb-5 group">
+                <input type="password" name="floating_password" id="floating_password"
+                    class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:border-gray-600 dark:focus:border-green-600 focus:outline-none focus:ring-0 focus:border-green-600 peer"
+                    placeholder=" " required autocomplete="new-password" formControlName="password" />
+                <label for="floating_password"
+                    class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-green-600 peer-focus:dark:text-green-600 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Password</label>
+                <!--! Error -->
+                @let passControl=signUpForm.get('password');
+                @if(passControl?.errors && passControl?.touched){
+                <div role="alert"
+                    class="bg-red-100 my-3 dark:bg-red-700 border-l-4 border-red-500 dark:border-red-400 text-red-900 dark:text-red-100 p-2 rounded-lg flex items-center transition duration-300 ease-in-out hover:bg-red-200 dark:hover:bg-red-800 transform hover:scale-105">
+                    <svg stroke="currentColor" viewBox="0 0 24 24" fill="none"
+                        class="h-5 w-5 flex-shrink-0 mr-2 text-red-400" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M13 16h-1v-4h1m0-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" stroke-width="2"
+                            stroke-linejoin="round" stroke-linecap="round"></path>
+                    </svg>
+                    @if(passControl?.getError('required')){
+                    <p class="text-xs font-semibold">
+                        Password is required
+                    </p>
+                    }@else if(passControl?.getError('pattern')){
+                    <p class="text-xs font-semibold">
+                        Password must be at least 7 letters and must start with upperCase
+                    </p>
+                    }
+                </div>
+                }
+            </div>
+
+            <!-- & rePass -->
+            <div class="relative z-0 w-full mb-5 group">
+                <input type="password" name="repeat_password" id="floating_repeat_password"
+                    class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none  dark:border-gray-600 dark:focus:border-green-600 focus:outline-none focus:ring-0 focus:border-green-600 peer"
+                    placeholder=" " required autocomplete="new-password" formControlName="rePassword" />
+                <label for="floating_repeat_password"
+                    class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-green-600 peer-focus:dark:text-green-600 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Confirm
+                    password</label>
+
+                <!--! Error -->
+                <!-- @let rePassControl=signUpForm.get('rePassword'); -->
+                @if(signUpForm.getError('mismatch') && signUpForm.get('rePassword')?.touched){
+                <div role="alert"
+                    class="bg-red-100 my-3 dark:bg-red-700 border-l-4 border-red-500 dark:border-red-400 text-red-900 dark:text-red-100 p-2 rounded-lg flex items-center transition duration-300 ease-in-out hover:bg-red-200 dark:hover:bg-red-800 transform hover:scale-105">
+                    <svg stroke="currentColor" viewBox="0 0 24 24" fill="none"
+                        class="h-5 w-5 flex-shrink-0 mr-2 text-red-400" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M13 16h-1v-4h1m0-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" stroke-width="2"
+                            stroke-linejoin="round" stroke-linecap="round"></path>
+                    </svg>
+                    <p class="text-xs font-semibold">
+                        Password confirmation is incorrect
+                    </p>
+                </div>
+                }
+
+                @if(signUpForm.get('rePassword')?.getError('required') && signUpForm.get('rePassword')?.touched){
+                <div role="alert"
+                    class="bg-red-100 my-3 dark:bg-red-700 border-l-4 border-red-500 dark:border-red-400 text-red-900 dark:text-red-100 p-2 rounded-lg flex items-center transition duration-300 ease-in-out hover:bg-red-200 dark:hover:bg-red-800 transform hover:scale-105">
+                    <svg stroke="currentColor" viewBox="0 0 24 24" fill="none"
+                        class="h-5 w-5 flex-shrink-0 mr-2 text-red-400" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M13 16h-1v-4h1m0-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" stroke-width="2"
+                            stroke-linejoin="round" stroke-linecap="round"></path>
+                    </svg>
+
+                    <p class="text-xs font-semibold">
+                        Password is required
+                    </p>
+                </div>
+                }
+            </div>
+
+            <!-- & Phone -->
+            <div class="relative z-0 w-full mb-5 group">
+                <input type="tel" name="floating_phone" id="floating_phone"
+                    class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none  dark:border-gray-600 dark:focus:border-green-600 focus:outline-none focus:ring-0 focus:border-green-600 peer"
+                    placeholder=" " required formControlName="phone" />
+                <label for="floating_phone"
+                    class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-green-600 peer-focus:dark:text-green-600 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Phone
+                    number (123-456-7890)</label>
+                <!--! Error -->
+                @let phoneControl=signUpForm.get('phone');
+                @if(phoneControl?.errors && phoneControl?.touched){
+                <div role="alert"
+                    class="bg-red-100 my-3 dark:bg-red-700 border-l-4 border-red-500 dark:border-red-400 text-red-900 dark:text-red-100 p-2 rounded-lg flex items-center transition duration-300 ease-in-out hover:bg-red-200 dark:hover:bg-red-800 transform hover:scale-105">
+                    <svg stroke="currentColor" viewBox="0 0 24 24" fill="none"
+                        class="h-5 w-5 flex-shrink-0 mr-2 text-red-400" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M13 16h-1v-4h1m0-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" stroke-width="2"
+                            stroke-linejoin="round" stroke-linecap="round"></path>
+                    </svg>
+                    @if(phoneControl?.getError('required')){
+                    <p class="text-xs font-semibold">
+                        Phone number is required
+                    </p>
+                    }@else if(phoneControl?.getError('pattern')){
+                    <p class="text-xs font-semibold">
+                        invalid phone number
+                    </p>
+                    }
+                </div>
+                }
+            </div>
+
+            <!-- & Btn Submit -->
+            <button [disabled]="isLoading" type="button" (click)="onSubmit()"
+                class="text-white bg-green-600 block mx-auto  hover:bg-green-900 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-sm w-60 my-4 px-5 py-2.5 text-center dark:bg-green-600 dark:hover:bg-green-6000 dark:focus:ring-green-600">
+                @if(isLoading){
+                <i class="fas fa-spin fa-spinner"></i>
+                }@else {
+                Submit
+                }
+            </button>
+
+
+
+
+            <!--& Erorr and Success msg  -->
+            @if(errorMessage.length>0){
+            <div role="alert"
+                class="bg-red-100 my-3 dark:bg-red-700 border-l-4 border-red-500 dark:border-red-400 text-red-900 dark:text-red-100 p-2 rounded-lg flex items-center transition duration-300 ease-in-out hover:bg-red-200 dark:hover:bg-red-800 transform hover:scale-105">
+                <svg stroke="currentColor" viewBox="0 0 24 24" fill="none"
+                    class="h-5 w-5 flex-shrink-0 mr-2 text-red-400" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M13 16h-1v-4h1m0-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" stroke-width="2"
+                        stroke-linejoin="round" stroke-linecap="round"></path>
+                </svg>
+                <p class="text-xs font-semibold">
+                    {{errorMessage}}
+                </p>
+            </div>
+            }
+            @if(successMessage.length>0){
+
+
+            <div role="alert"
+                class="bg-green-100 dark:bg-green-600 border-l-4 border-green-500 dark:border-green-500 text-green-900 dark:text-green-100 p-2 rounded-lg flex items-center transition duration-300 ease-in-out hover:bg-green-200 dark:hover:bg-green-800 transform hover:scale-105">
+                <svg stroke="currentColor" viewBox="0 0 24 24" fill="none"
+                    class="h-5 w-5 flex-shrink-0 mr-2 text-green-400" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M13 16h-1v-4h1m0-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" stroke-width="2"
+                        stroke-linejoin="round" stroke-linecap="round"></path>
+                </svg>
+                <p class="text-xs font-semibold">{{successMessage}}</p>
+            </div>
+
+            }
+
+        </form>
+    </div>
+</div>
