--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,11 +1,11 @@
-<nav class="bg-gray-100">
-    <div class="max-w-screen-xl flex flex-wrap items-center mx-auto p-4 sm:justify-between">
+<nav class="bg-gray-100 fixed top-0 z-50 w-full shadow-lg ">
+    <div class="max-w-screen-xl flex flex-wrap items-center mx-auto p-4">
         <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
             <img src="/images/freshcart-logo.svg" class="h-8" alt="Flowbite Logo" />
         </a>
 
         <button data-collapse-toggle="navbar-default" type="button"
-            class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+            class=" ms-auto inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
             aria-controls="navbar-default" aria-expanded="false">
             <span class="sr-only">Open main menu</span>
             <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
@@ -14,14 +14,20 @@
             </svg>
         </button>
 
-        <div class="hidden w-full md:flex md:w-auto between flex-grow-1 " id="navbar-default">
+
+
+
+        <div class="hidden w-full md:flex md:w-auto ms-auto items-center" id="navbar-default">
             <!-- !main links -->
-             @if (isLogin) {
-                <ul
-                class="font-medium flex flex-col  p-4 md:p-0 mt-4 rounded-lg  md:flex-row md:space-x-4 rtl:space-x-reverse md:mt-0 md:border-0 ">
+            @if (isLogin) {
+            <ul
+                class="font-semibold flex flex-col  flex-grow-1 p-4 md:p-0 mt-4 rounded-lg  md:flex-row md:space-x-4 rtl:space-x-reverse md:mt-0 md:border-0 ">
                 <li>
                     <a routerLink="/home" routerLinkActive="bg-main text-white"
                         class=" block py-2 px-3  rounded-sm  text-gray-500 duration-300 ">Home</a>
+                </li>
+                <li><a routerLink="/products" routerLinkActive=" bg-main text-white"
+                        class="block py-2 px-3  rounded-sm   text-gray-500 duration-300">Products</a>
                 </li>
                 <li> <a routerLink="/categories" routerLinkActive="bg-main text-white "
                         class="block py-2 px-3  rounded-sm   text-gray-500 duration-300 ">Categories</a>
@@ -29,47 +35,46 @@
                 <li> <a routerLink="/brands" routerLinkActive=" bg-main text-white"
                         class="block py-2 px-3  rounded-sm    text-gray-500 duration-300 ">Brands</a>
                 </li>
-                <li><a routerLink="cart" routerLinkActive=" bg-main text-white"
-                        class="block py-2 px-3  rounded-sm    text-gray-500 duration-300">Cart</a>
-                </li>
-                <!-- <li><a routerLink="/details" routerLinkActive=" bg-main text-white"
-                        class="block py-2 px-3  rounded-sm   text-gray-500 duration-300">Product</a>
-                </li> -->
             </ul>
-             }
+            }
 
-           
+
             <!-- !social links -->
 
             <ul
-                class="font-medium flex flex-grow-1 md:justify-end flex-row p-4 md:p-0 mt-4 rounded-lg  md:flex-row md:space-x-2 rtl:space-x-reverse md:mt-0 md:border-0 ">
+                class="font-medium lg:px-20 flex md:justify-end flex-row p-4 md:p-0 mt-4 rounded-lg  md:flex-row md:space-x-2 rtl:space-x-reverse md:mt-0 md:border-0 ">
                 <li>
                     <a href="https://www.google.com"
-                        class=" block py-2 px-3  rounded-sm  text-gray-900 duration-300 "><i class="fa-brands fa-google"></i></a>
+                        class=" block py-2 px-3  rounded-sm  text-gray-900 duration-300 "><i
+                            class="fa-brands fa-google"></i></a>
                 </li>
                 <li>
                     <a href="https://www.google.com"
-                        class=" block py-2 px-3  rounded-sm  text-gray-900 duration-300 "><i class="fa-brands fa-instagram"></i></a>
+                        class=" block py-2 px-3  rounded-sm  text-gray-900 duration-300 "><i
+                            class="fa-brands fa-instagram"></i></a>
                 </li>
                 <li>
                     <a href="https://www.google.com"
-                        class=" block py-2 px-3  rounded-sm  text-gray-900 duration-300 "><i class="fa-brands fa-linkedin"></i></a>
+                        class=" block py-2 px-3  rounded-sm  text-gray-900 duration-300 "><i
+                            class="fa-brands fa-linkedin"></i></a>
                 </li>
                 <li>
                     <a href="https://www.google.com"
-                        class=" block py-2 px-3  rounded-sm  text-gray-900 duration-300 "><i class="fa-brands fa-facebook"></i></a>
+                        class=" block py-2 px-3  rounded-sm  text-gray-900 duration-300 "><i
+                            class="fa-brands fa-facebook"></i></a>
                 </li>
                 <li>
                     <a href="https://www.google.com"
-                        class=" block py-2 px-3  rounded-sm  text-gray-900 duration-300 "><i class="fa-brands fa-tiktok"></i></a>
+                        class=" block py-2 px-3  rounded-sm  text-gray-900 duration-300 "><i
+                            class="fa-brands fa-tiktok"></i></a>
                 </li>
-             
+
             </ul>
 
             <!-- !auth links -->
             <ul
-                class="font-medium flex flex-col p-4 md:p-0 mt-4 rounded-lg  md:flex-row md:space-x-4 rtl:space-x-reverse md:mt-0 md:border-0 ">
-            @if (!isLogin) {
+                class="font-medium flex flex-col p-4 md:p-0 mt-4 rounded-lg  md:flex-row md:space-x-4 rtl:space-x-reverse md:mt-0 md:border-0  items-center">
+                @if (!isLogin) {
                 <li>
                     <a routerLink="/signin" routerLinkActive="bg-main text-white"
                         class=" block py-2 px-3  rounded-sm  text-gray-500 duration-300 ">Sign In</a>
@@ -77,15 +82,43 @@
                 <li> <a routerLink="/signup" routerLinkActive="bg-main text-white "
                         class="block py-2 px-3  rounded-sm   text-gray-500 duration-300 ">Sign Up</a>
                 </li>
-            }
-               @if(isLogin){
-                <li> <button role="button"
-                    class="block py-2 px-3  rounded-sm    text-gray-500 duration-300 cursor-pointer">Log
-                    Out</button>
-            </li>
+                }
+                @if(isLogin){
+                <li><a routerLink="wishlist" routerLinkActive="heart-active"
+                        class="heart relative block py-2 px-3 rounded-sm  text-gray-500 duration-300">
+                        <i class="fa-solid fa-heart text-2xl"></i>
+                        <div
+                            class="absolute inline-flex items-center justify-center w-6 h-6 text-xs font-bold text-white bg-red-500  rounded-full -top-2 -end-2">
+                            20</div>
+                    </a>
+
+                </li>
+                <li><a routerLink="cart" routerLinkActive="cart-active"
+                        class="cart relative block py-2 px-3 rounded-sm  text-gray-500 duration-300">
+
+                        <i class="fa-solid fa-cart-shopping text-2xl"></i>
+                        <div
+                            class="absolute inline-flex items-center justify-center w-6 h-6 text-xs font-bold text-white bg-red-500  rounded-full -top-2 -end-2">
+                            {{_cartService.numOfCartItems}}</div>
+                    </a>
+                </li>
+                <li><a routerLink="order" routerLinkActive="cart-active"
+                        class="cart relative block py-2 px-3 rounded-sm  text-gray-500 duration-300">
+
+                        <i class="fa-solid fa-bell text-2xl"></i>
+                        <div
+                            class="absolute inline-flex items-center justify-center w-6 h-6 text-xs font-bold text-white bg-red-500  rounded-full -top-2 -end-2">
+                            0 </div>
+                    </a>
+                </li>
+
+                <li> <button (click)="logOut()" role="button"
+                        class="block py-2 px-3  rounded-sm  text-gray-500 duration-300 cursor-pointer">
+                        <i class="fa-solid fa-right-from-bracket text-2xl"></i></button>
+                </li>
 
 
-               }
+                }
             </ul>
         </div>
     </div>
