--- a/src/app/pages/main-layout/cart/cart.component.html
+++ b/src/app/pages/main-layout/cart/cart.component.html
@@ -1,1 +1,187 @@
-<p>cart works!</p>
+@if (allCartProducts) {
+<section class="bg-white py-8 antialiased md:py-16 ">
+    <div class="mx-auto max-w-screen-xl px-4 2xl:px-0">
+        <h2 class="text-xl font-semibold text-gray-900 sm:text-2xl shadow-lg text-center p-5 rounded">
+            Shopping Cart
+        </h2>
+
+        <div class="mt-6 sm:mt-8 md:gap-6 lg:flex lg:items-start xl:gap-8">
+            <!--& product -->
+            <div class="mx-auto  w-full flex-none lg:max-w-2xl xl:max-w-4xl">
+                <div class="space-y-6">
+                    @for (item of allCartProducts.data.products; track $index) {
+                    <div class="rounded-lg border border-gray-200 bg-white p-4 shadow-sm md:p-6">
+                        <div class="space-y-4 md:flex md:items-center md:justify-between md:gap-6 md:space-y-0">
+                            <a href="#" class="shrink-0 md:order-1">
+                                <img class="h-20 w-20 block" [src]="item.product.imageCover" alt="imac image" />
+                            </a>
+
+                            <label for="counter-input" class="sr-only">Choose quantity:</label>
+                            <div class="flex items-center justify-between md:order-3 md:justify-end">
+                                <div class="flex items-center">
+                                    <button type="button" (click)="updateCart(item.product._id,item.count - 1)"
+                                        class="inline-flex h-5 w-5 shrink-0 items-center justify-center rounded-md border border-gray-300 bg-gray-100 hover:bg-gray-200 focus:outline-none focus:ring-2 focus:ring-gray-100">
+                                        <svg class="h-2.5 w-2.5 text-gray-900" aria-hidden="true"
+                                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 2">
+                                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                                stroke-width="2" d="M1 1h16" />
+                                        </svg>
+                                    </button>
+                                    <input type="text"
+                                        class="w-10 shrink-0 border-0 bg-transparent text-center text-sm font-medium text-gray-900 focus:outline-none focus:ring-0"
+                                        placeholder="" [value]="item.count" />
+
+                                    <button type="button" (click)="updateCart(item.product._id, item.count + 1)"
+                                        class="inline-flex h-5 w-5 shrink-0 items-center justify-center rounded-md border border-gray-300 bg-gray-100 hover:bg-gray-200 focus:outline-none focus:ring-2 focus:ring-gray-100">
+                                        <svg class="h-2.5 w-2.5 text-gray-900" aria-hidden="true"
+                                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 18">
+                                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                                stroke-width="2" d="M9 1v16M1 9h16" />
+                                        </svg>
+                                    </button>
+                                </div>
+                                <div class="text-end md:order-4 md:w-32">
+                                    <p class="text-base font-bold text-gray-900">{{item.price |currency:' EGP '}}</p>
+                                </div>
+                            </div>
+
+                            <div class="w-full min-w-0 flex-1 space-y-4 md:order-2 md:max-w-md">
+                                <a href="#"
+                                    class="text-base font-medium text-gray-900 hover:underline">{{item.product.title}}</a>
+
+                                <div class="flex items-center gap-4">
+                                    <button type="button"
+                                        class="inline-flex items-center text-sm font-medium text-gray-500 hover:text-gray-900 hover:underline">
+                                        <svg class="me-1.5 h-5 w-5" aria-hidden="true"
+                                            xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
+                                            viewBox="0 0 24 24">
+                                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                                stroke-width="2"
+                                                d="M12.01 6.001C6.5 1 1 8 5.782 13.001L12.011 20l6.23-7C23 8 17.5 1 12.01 6.002Z" />
+                                        </svg>
+                                        Add to Favorites
+                                    </button>
+
+                                    <button type="button" (click)="removeFromCart(item.product._id)"
+                                        class="inline-flex items-center text-sm font-medium text-red-600 hover:underline">
+                                        <svg class="me-1.5 h-5 w-5" aria-hidden="true"
+                                            xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
+                                            viewBox="0 0 24 24">
+                                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                                stroke-width="2" d="M6 18 17.94 6M18 18 6.06 6" />
+                                        </svg>
+                                        Remove
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    } @empty {
+                    <div id="alert-additional-content-1"
+                        class="p-4 mb-4 text-green-800 border border-green-300 rounded-lg bg-green-50" role="alert">
+                        <div class="flex items-center">
+                            <svg class="shrink-0 w-4 h-4 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                                fill="currentColor" viewBox="0 0 20 20">
+                                <path
+                                    d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z" />
+                            </svg>
+                            <span class="sr-only">Info</span>
+                            <h3 class="text-lg font-medium">Your cart is empty. Please add items before</h3>
+                        </div>
+                        <div class="mt-2 mb-4 text-sm">
+
+                        </div>
+                        <div class="flex">
+                            <button type="button" routerLink="/products"
+                                class="text-white bg-green-600 hover:bg-green-700 focus:ring-4 focus:outline-none focus:ring-green-200 font-medium rounded-lg text-xs px-3 py-1.5 me-2 text-center inline-flex items-center">
+                                <svg class="me-2 h-3 w-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                                    fill="currentColor" viewBox="0 0 20 14">
+                                    <path
+                                        d="M10 0C4.612 0 0 5.336 0 7c0 1.742 3.546 7 10 7 6.454 0 10-5.258 10-7 0-1.664-4.612-7-10-7Zm0 10a3 3 0 1 1 0-6 3 3 0 0 1 0 6Z" />
+                                </svg>
+                                Products
+                            </button>
+                        </div>
+                    </div>
+                    }
+                    <div class="text-center">
+
+                    </div>
+
+
+
+                </div>
+            </div>
+
+            @if (allCartProducts.data.products.length>0) {
+            <!--& Summary -->
+            <div class="mx-auto mt-6 max-w-4xl flex-1 space-y-6 lg:mt-0 lg:w-full">
+                <div class="space-y-4 rounded-lg border border-gray-200 bg-white p-4 shadow-sm sm:p-6">
+                    <p class="text-xl font-semibold text-gray-900">Order summary</p>
+
+                    <div class="space-y-4">
+
+                        <div class="space-y-2">
+                            <dl class="flex items-center justify-between gap-4">
+                                <dt class="text-base font-normal text-gray-500">
+                                    Original price
+                                </dt>
+                                <dd class="text-base font-medium text-gray-900">$7,592.00</dd>
+                            </dl>
+
+                            <dl class="flex items-center justify-between gap-4">
+                                <dt class="text-base font-normal text-gray-500">Savings</dt>
+                                <dd class="text-base font-medium text-green-600">-$299.00</dd>
+                            </dl>
+
+                            <dl class="flex items-center justify-between gap-4">
+                                <dt class="text-base font-normal text-gray-500">
+                                    Store Pickup
+                                </dt>
+                                <dd class="text-base font-medium text-gray-900">$99</dd>
+                            </dl>
+
+                            <dl class="flex items-center justify-between gap-4">
+                                <dt class="text-base font-normal text-gray-500">Tax</dt>
+                                <dd class="text-base font-medium text-gray-900">$799</dd>
+                            </dl>
+                        </div>
+
+                        <dl class="flex items-center justify-between gap-4 border-t border-gray-200 pt-2">
+                            <dt class="text-base font-bold text-gray-900">Total</dt>
+                            <dd class="text-base font-bold text-gray-900">{{allCartProducts.data.totalCartPrice
+                                |currency:' EGP ' }}</dd>
+                        </dl>
+                    </div>
+
+                    <!-- <a href="#"
+                        class="flex bg-green-500 w-full items-center justify-center rounded-lg bg-primary-700 px-5 py-2.5 text-sm font-medium text-white hover:bg-primary-800 focus:outline-none focus:ring-4 focus:ring-primary-300">Proceed
+                        to Checkout</a> -->
+
+                    <div class="flex justify-between items-center !mt-10">
+
+                        <button [routerLink]="['/payment',allCartProducts.cartId]"
+                            class=" text-white bg-green-500 border-0 py-2 px-20 focus:outline-none hover:bg-green-600 rounded text-sm cursor-pointer">
+                            Checkout
+                        </button>
+                        <button (click)="clearCart()"
+                            class=" text-white bg-red-500 border-0 py-2 px-6 focus:outline-none hover:bg-red-600 rounded text-sm cursor-pointer ">
+
+                            <i class="fas fa-trash"></i>
+                        </button>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+            }
+
+
+        </div>
+
+    </div>
+</section>
+
+}
