--- a/src/app/pages/main-layout/notfound/notfound.component.html
+++ b/src/app/pages/main-layout/notfound/notfound.component.html
@@ -1,1 +1,6 @@
-<p>notfound works!</p>
+<div class="container mx-auto h-[70vh] flex justify-center items-center">
+    <div class="">
+        <img class="lg:w-[800px] " src="/images/error.svg" alt="error">
+    </div>
+   
+</div>
