--- a/src/app/pages/main-layout/home/second-banner/second-banner.component.html
+++ b/src/app/pages/main-layout/home/second-banner/second-banner.component.html
@@ -3,8 +3,12 @@
 
   @for (category of categories.data; track $index) {
     <ng-template carouselSlide >
-        <img class="h-[300px] object-cover" [src]="category.image" [alt]="category.name" [title]="category.slug">
-        <p class="text-center my-2">{{category.slug}}</p>
+      <div class=" px-2 py-2 ">
+        <img class="h-[300px] object-cover rounded-lg  " [src]="category.image" [alt]="category.name" [title]="category.slug">
+        
+      </div>
+      <p class="text-center my-2">{{category.slug}}</p>
+       
       </ng-template>
   }
    
