--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -1,68 +1,103 @@
-<footer class="bg-gray-100 py-9">
-    <div class="container mx-auto px-2 md:px-0">
-      <h2 class="text-2xl">Get The FreshCart App</h2>
-      <h3 class="text-gray-500">
-        We Will send you a link, open it on your phone to download the app.
-      </h3>
-      <div class="flex space-x-2 my-3">
-        <input
-          type="email"
-          id="email"
-          class="bg-gray-50 border w-[80%] border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-green-500 focus:border-green-500 block p-2"
-          placeholder="name@flowbite.com"
-          required
-        />
-  
-        <button class="px-3 py-2 bg-green-700 text-white rounded w-[30%]">
-          Share App Link
-        </button>
+
+  <footer class="text-gray-600 body-font bg-gray-100">
+    <div class="container px-5 py-24 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-nowrap flex-wrap flex-col">
+      <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left">
+        <a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
+          <!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewBox="0 0 24 24">
+            <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
+          </svg> -->
+          <img class="w-[55px] rounded-full" src="images/logo.jpg" alt="logo">
+          <span class="ml-3 text-xl font-bold">FreshCart App</span>
+        </a>
+        <p class="mt-4 text-sm text-gray-500 px-4">Your product as you want !</p>
       </div>
-      <!-- Footer Payment -->
-      <div
-        class="flex-col md:flex-row md:flex justify-between my-7 py-7 border-t-1 border-b-1 border-gray-700/25"
-      >
-        <div class="flex items-center space-x-2">
-          <p class="text-2xl font-normal">Payment Partners</p>
-          <div class="flex space-x-3">
-            <img
-              class="w-[25px]"
-              src="./images/amazon-pay.png"
-              alt="Fresh Car amazon"
-            />
-            <img
-              class="w-[25px]"
-              src="./images/American-Express-Color.png"
-              alt="Fresh Cart  American"
-            />
-            <img
-              class="w-[25px]"
-              src="./images/mastercard.webp"
-              alt="Fresh Cart  mastercard"
-            />
-            <img
-              class="w-[25px]"
-              src="./images/paypal.png"
-              alt="Fresh Cart  paypal"
-            />
-          </div>
+      <div class="flex-grow flex flex-wrap md:pl-20 -mb-10 md:mt-0 mt-10 md:text-left justify-between text-center">
+        <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+          <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">CATEGORIES</h2>
+          <nav class="list-none mb-10">
+            <li>
+              <a class="text-green-600 cursor-pointer hover:text-green-800">Electronics</a>
+            </li>
+            <li>
+              <a class="text-green-600 cursor-pointer hover:text-green-800">Men's Fashion</a>
+            </li>
+            <li>
+              <a class="text-green-600 cursor-pointer hover:text-green-800">Women's Fashion</a>
+            </li>
+            <li>
+              <a class="text-green-600 cursor-pointer hover:text-green-800">SuperMarket</a>
+            </li>
+          </nav>
         </div>
-        <div>
-          <p>Get Deliveries With FreshCart</p>
-          <div class="flex">
-            <img
-              class="w-[150px]"
-              src="./images/get-apple-store.png"
-              alt="Fresh Cart AppStore"
-            />
-            <img
-              class="w-[150px]"
-              src="./images/get-google-play.png"
-              alt="Fresh Cart Google Play"
-            />
-          </div>
+        <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+          <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">CATEGORIES</h2>
+          <nav class="list-none mb-10">
+            <li>
+              <a class="text-green-600 cursor-pointer hover:text-green-800">Baby & Toys</a>
+            </li>
+            <li>
+              <a class="text-green-600 cursor-pointer hover:text-green-800">Electronics</a>
+            </li>
+            <li>
+              <a class="text-green-600 cursor-pointer hover:text-green-800">Mobiles</a>
+            </li>
+            <li>
+              <a class="text-green-600 cursor-pointer hover:text-green-800">Beauty & Health</a>
+            </li>
+          </nav>
         </div>
+        <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+          <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">CATEGORIES</h2>
+          <nav class="list-none mb-10">
+            <li>
+              <a class="text-green-600 cursor-pointer hover:text-green-800">Home</a>
+            </li>
+            <li>
+              <a class="text-green-600 cursor-pointer hover:text-green-800">Music</a>
+            </li>
+            <li>
+              <a class="text-green-600 cursor-pointer hover:text-green-800">Books</a>
+            </li>
+            <li>
+              <a class="text-green-600 cursor-pointer hover:text-green-800">Dry Food</a>
+            </li>
+          </nav>
+        </div>
+      
+      </div>
+    </div>
+    <div class="bg-gray-200">
+      <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
+        <p class="text-gray-500 text-sm text-center sm:text-left">© Designed by Rana Hani 
+          <a href="https://twitter.com/knyttneve" rel="noopener noreferrer" class="text-gray-600 ml-1" target="_blank">2025</a>
+        </p>
+        <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
+          <a class="text-gray-500">
+            <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+              <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
+            </svg>
+          </a>
+          <a class="ml-3 text-gray-500">
+            <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+              <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
+            </svg>
+          </a>
+          <a class="ml-3 text-gray-500">
+            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+              <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
+              <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
+            </svg>
+          </a>
+          <a class="ml-3 text-gray-500">
+            <svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="0" class="w-5 h-5" viewBox="0 0 24 24">
+              <path stroke="none" d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"></path>
+              <circle cx="4" cy="4" r="2" stroke="none"></circle>
+            </svg>
+          </a>
+        </span>
       </div>
     </div>
   </footer>
+   
 
   
