--- a/src/app/pages/main-layout/home/first-banner/first-banner.component.html
+++ b/src/app/pages/main-layout/home/first-banner/first-banner.component.html
@@ -1,20 +1,26 @@
 <div class="container mx-auto">
-    <div class="lg:grid grid-cols-12">
-        <div class="col-span-10">
+    <div class="lg:grid grid-cols-12 gap-4">
+        <div class="col-span-10 rounded-lg overflow-hidden">
             <owl-carousel-o [options]="customOptions">
-                <ng-template carouselSlide><img class="h-[400px]  " src="/images/img1.avif" alt=""></ng-template>
-                <ng-template carouselSlide><img class="h-[400px]  " src="/images/img2.avif" alt=""></ng-template>
-                <ng-template carouselSlide><img class="h-[400px]  " src="/images/img3.avif" alt=""></ng-template>
-                <ng-template carouselSlide><img class="h-[400px]  " src="/images/img4.avif" alt=""></ng-template>
-                <ng-template carouselSlide><img class="h-[400px]  " src="/images/img6.avif" alt=""></ng-template>
-                <ng-template carouselSlide><img class="h-[400px]  " src="/images/img7.avif" alt=""></ng-template>
+                <ng-template carouselSlide><img class="h-[400px] rounded-lg  " src="/images/img1.avif"
+                        alt=""></ng-template>
+                <ng-template carouselSlide><img class="h-[400px] rounded-lg   " src="/images/img2.avif"
+                        alt=""></ng-template>
+                <ng-template carouselSlide><img class="h-[400px]  rounded-lg " src="/images/img3.avif"
+                        alt=""></ng-template>
+                <ng-template carouselSlide><img class="h-[400px] rounded-lg  " src="/images/img4.avif"
+                        alt=""></ng-template>
+                <ng-template carouselSlide><img class="h-[400px] rounded-lg  " src="/images/img6.avif"
+                        alt=""></ng-template>
+                <ng-template carouselSlide><img class="h-[400px] rounded-lg  " src="/images/img7.avif"
+                        alt=""></ng-template>
 
             </owl-carousel-o>
         </div>
-        <div class="col-span-2">
-            <div class="hidden lg:block">
-                <img class="block w-full h-[200px]" src="/images/slider-image-1.jpeg" alt="">
-                <img class="block w-full h-[200px]" src="/images/slider-image-3.jpeg" alt="">
+        <div class="col-span-2 rounded-lg overflow-hidden  ">
+            <div class="hidden lg:block ">
+                <img class="block w-full h-[200px] pb-2 rounded-lg" src="/images/slider-image-1.jpeg" alt="">
+                <img class="block w-full h-[200px] pt-2 rounded-lg " src="/images/slider-image-3.jpeg" alt="">
             </div>
         </div>
     </div>
