--- a/src/app/pages/main-layout/home/home-product/home-product.component.html
+++ b/src/app/pages/main-layout/home/home-product/home-product.component.html
@@ -29,7 +29,7 @@
     <div class="grid md:grid-cols-2 lg:grid-cols-4">
         @for (product of allProducts.data
         |searchProducts :(searchValue || 'el') ; track $index) {
-        <app-product-cart [product]="product"></app-product-cart>
+        <app-product-cart [allWishListId]="allWishListId" [product]="product"></app-product-cart>
         }
     </div>
 
