--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -13,13 +13,13 @@ body{
   background-color: $main-color;
 }
 
-.nav-link {
-    transition: unset !important;
-  }
+// .nav-link {
+//     transition: unset !important;
+//   }
   .active-link {
-    background-color:$main-color !important;
-    color: $light-color !important;
+    color: black !important;
     border-radius: 5px;
+    border-bottom: 1px solid $main-color;
   }
   
   .rating-color {
@@ -30,6 +30,7 @@ body{
   }
   a,
   a:hover {
+    
     color: black;
     text-decoration: none;
   }
@@ -44,8 +45,6 @@ body{
         box-shadow: 0 0 10px #11bd1168;
     }
   }
-  
- 
   
   .font-sm {
     font-size: 12px;
