--- a/src/app/pages/main-layout/home/first-banner/first-banner.component.html
+++ b/src/app/pages/main-layout/home/first-banner/first-banner.component.html
@@ -1,5 +1,5 @@
 <div class="container mx-auto">
-    <div class="lg:grid grid-cols-12 gap-4">
+    <div class="hidden lg:grid grid-cols-12 gap-4">
         <div class="col-span-10 rounded-lg overflow-hidden">
             <owl-carousel-o [options]="customOptions">
                 <ng-template carouselSlide><img class="h-[400px] rounded-lg  " src="/images/img1.avif"
