--- a/src/app/pages/main-layout/home/home-product/home-product.component.html
+++ b/src/app/pages/main-layout/home/home-product/home-product.component.html
@@ -1,7 +1,7 @@
 @if (allProducts) {
 <div class="container mx-auto">
 
-    <form class="flex items-center max-w-lg mx-auto my-10">
+    <form class="flex items-center max-w-lg mx-auto my-10 px-4">
         <label for="simple-search" class="sr-only">Search</label>
         <div class="relative w-full">
             <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
