--- a/src/app/pages/main-layout/wish-list/wish-list.component.html
+++ b/src/app/pages/main-layout/wish-list/wish-list.component.html
@@ -2,7 +2,6 @@
     <div class="mx-auto max-w-screen-xl px-4 2xl:px-0">
         <h2 class="text-xl font-semibold text-gray-900 sm:text-2xl shadow-lg text-center p-5 rounded">
             Wish List 
-
         </h2>
 
         <div class="mt-6 sm:mt-8 md:gap-6 lg:flex lg:items-start xl:gap-8">
@@ -26,7 +25,7 @@
 
                             <div class="w-full min-w-0 flex-1 space-y-4 md:order-2 md:max-w-md">
                                 <a href="#"
-                                    class="text-base font-medium text-gray-900 ">{{product.title}}</a>
+                                    class="text-base font-bold text-gray-900 ">{{product.title}}</a>
 
                                 <div class="flex items-center gap-4">
                                     <button type="button" (click)="addToCart(product._id)"
@@ -36,7 +35,7 @@
                                     </button>
 
                                     <button type="button" (click)="removeFromWishList(product._id)"
-                                        class="inline-flex items-center text-sm font-medium text-red-600 hover:bg-red-100 p-3 rounded">
+                                        class="inline-flex items-center text-sm font-bold text-red-600 hover:bg-red-100 p-3 rounded">
                                         <svg class="me-1.5 h-5 w-5" aria-hidden="true"
                                             xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
                                             viewBox="0 0 24 24">
