--- a/src/app/auth/pages/forget-password/forget-password.component.html
+++ b/src/app/auth/pages/forget-password/forget-password.component.html
@@ -7,7 +7,7 @@
             <!-- & Email -->
             <div class="relative z-0 w-full mb-5 group">
                 <input  type="email" name="floating_email" id="floating_email"
-                    class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:border-gray-600 dark:focus:border-green-600 focus:outline-none focus:ring-0 focus:border-green-600 peer  "
+                    class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none  focus:outline-none focus:ring-0 focus:border-green-600 peer rounded-md  "
                     placeholder=" " required autocomplete="email" formControlName="email" />
                 <label for="floating_email"
                     class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto peer-focus:text-green-600 peer-focus:dark:text-green-600 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Email
@@ -86,7 +86,7 @@
             <!-- & code -->
             <div class="relative z-0 w-full mb-5 group">
                 <input type="text" name="floating_password" id="floating_password"
-                    class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:border-gray-600 dark:focus:border-green-600 focus:outline-none focus:ring-0 focus:border-green-600 peer"
+                    class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none  focus:outline-none focus:ring-0 focus:border-green-600 peer rounded-md"
                     placeholder=" " required autocomplete="new-password" formControlName="resetCode" />
                 <label for="floating_password"
                     class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-green-600 peer-focus:dark:text-green-600 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Code</label>
@@ -126,7 +126,7 @@
         
 
             <!--& Erorr and Success msg  -->
-            @if(errorMessage.length>0){
+            <!-- @if(errorMessage.length>0){
             <div role="alert"
                 class="bg-red-100 my-3 dark:bg-red-700 border-l-4 border-red-500 dark:border-red-400 text-red-900 dark:text-red-100 p-2 rounded-lg flex items-center transition duration-300 ease-in-out hover:bg-red-200 dark:hover:bg-red-800 transform hover:scale-105">
                 <svg stroke="currentColor" viewBox="0 0 24 24" fill="none"
@@ -151,7 +151,7 @@
                 </svg>
                 <p class="text-xs font-semibold">{{successMessage}}</p>
             </div>
-            }
+            } -->
 
         </form>
     </div>
@@ -165,7 +165,7 @@
             <!-- & Email -->
             <div class="relative z-0 w-full mb-5 group">
                 <input readonly type="email" name="floating_email" id="floating_email"
-                    class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:border-gray-600 dark:focus:border-green-600 focus:outline-none focus:ring-0 focus:border-green-600 peer  "
+                    class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none  focus:outline-none focus:ring-0 focus:border-green-600 peer rounded-md  "
                     placeholder=" " required autocomplete="email" formControlName="email" />
                 <label for="floating_email"
                     class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto peer-focus:text-green-600 peer-focus:dark:text-green-600 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Email
@@ -200,7 +200,7 @@
             <!-- & Pass -->
             <div class="relative z-0 w-full mb-5 group">
                 <input type="password" name="floating_password" id="floating_password"
-                    class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:border-gray-600 dark:focus:border-green-600 focus:outline-none focus:ring-0 focus:border-green-600 peer"
+                    class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none  focus:outline-none focus:ring-0 focus:border-green-600 peer rounded-md"
                     placeholder=" " required autocomplete="new-password" formControlName="newPassword" />
                 <label for="floating_password"
                     class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-green-600 peer-focus:dark:text-green-600 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">New
@@ -240,12 +240,10 @@
                 Submit
                 }
             </button>
-            <!-- <div class="text-center">
-                <a [routerLink]="['/forget']" class="text-gray-600 m-5 text-sm text-center font-medium hover:text-red-600" >Forget Password ?</a>
-            </div> -->
+           
 
             <!--& Erorr and Success msg  -->
-            @if(errorMessage.length>0){
+            <!-- @if(errorMessage.length>0){
             <div role="alert"
                 class="bg-red-100 my-3 dark:bg-red-700 border-l-4 border-red-500 dark:border-red-400 text-red-900 dark:text-red-100 p-2 rounded-lg flex items-center transition duration-300 ease-in-out hover:bg-red-200 dark:hover:bg-red-800 transform hover:scale-105">
                 <svg stroke="currentColor" viewBox="0 0 24 24" fill="none"
@@ -270,7 +268,7 @@
                 </svg>
                 <p class="text-xs font-semibold">{{successMessage}}</p>
             </div>
-            }
+            } -->
 
         </form>
     </div>
