--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -73,7 +73,7 @@
 
             <!-- !auth links -->
             <ul
-                class="font-medium flex flex-col p-4 md:p-0 mt-4 rounded-lg  md:flex-row  md:space-x-4 rtl:space-x-reverse md:mt-0 md:border-0  items-center">
+                class="font-bold flex flex-col p-4 md:p-0 mt-4 rounded-lg  md:flex-row  md:space-x-4 rtl:space-x-reverse md:mt-0 md:border-0  items-center">
                 @if (!isLogin) {
                 <li>
                     <a routerLink="/signin" routerLinkActive="active-link"
