--- a/src/app/pages/main-layout/cart/cart.component.html
+++ b/src/app/pages/main-layout/cart/cart.component.html
@@ -79,7 +79,7 @@
                     </div>
                     } @empty {
                     <div id="alert-additional-content-1"
-                        class="p-4 mb-4 text-green-800 border border-green-300 rounded-lg bg-green-50" role="alert">
+                        class="p-4 mb-4 text-green-800 border border-gray-100 rounded-lg bg-gray-50 shadow-md flex justify-center items-center flex-col" role="alert">
                         <div class="flex items-center">
                             <svg class="shrink-0 w-4 h-4 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
                                 fill="currentColor" viewBox="0 0 20 20">
@@ -87,19 +87,15 @@
                                     d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z" />
                             </svg>
                             <span class="sr-only">Info</span>
-                            <h3 class="text-lg font-medium">Your cart is empty. Please add items before</h3>
+                            <h3 class="text-lg font-semibold">Your cart is empty. Please add items before</h3>
                         </div>
                         <div class="mt-2 mb-4 text-sm">
 
                         </div>
-                        <div class="flex">
+                        <div class="flex w-full px-8 py-2 text-center">
                             <button type="button" routerLink="/products"
-                                class="text-white bg-green-600 hover:bg-green-700 focus:ring-4 focus:outline-none focus:ring-green-200 font-medium rounded-lg text-xs px-3 py-1.5 me-2 text-center inline-flex items-center">
-                                <svg class="me-2 h-3 w-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                                    fill="currentColor" viewBox="0 0 20 14">
-                                    <path
-                                        d="M10 0C4.612 0 0 5.336 0 7c0 1.742 3.546 7 10 7 6.454 0 10-5.258 10-7 0-1.664-4.612-7-10-7Zm0 10a3 3 0 1 1 0-6 3 3 0 0 1 0 6Z" />
-                                </svg>
+                                class="text-white bg-green-600 hover:bg-green-500  focus:outline-none  w-full font-medium rounded-md text-sm px-5 py-3 me-2 text-center items-center">
+            
                                 Products
                             </button>
                         </div>
@@ -155,10 +151,7 @@
                         </dl>
                     </div>
 
-                    <!-- <a href="#"
-                        class="flex bg-green-500 w-full items-center justify-center rounded-lg bg-primary-700 px-5 py-2.5 text-sm font-medium text-white hover:bg-primary-800 focus:outline-none focus:ring-4 focus:ring-primary-300">Proceed
-                        to Checkout</a> -->
-
+                  
                     <div class="flex justify-between items-center !mt-10">
 
                         <button [routerLink]="['/payment',allCartProducts.cartId]"
