--- a/src/app/pages/main-layout/payment-gateway/payment-gateway.component.html
+++ b/src/app/pages/main-layout/payment-gateway/payment-gateway.component.html
@@ -1,11 +1,11 @@
 <div class="container mx-auto">
-    <div class="signUp-Form my-8 ">
+    <div class="signUp-Form my-8 px-4 ">
         <form [formGroup]="payForm" class=" mx-auto rounded-lg shadow-lg p-10  max-w-xl ">
             <p class="title my-6">Checkout</p>
             <!-- & city -->
             <div class="relative z-0 w-full mb-5 group">
                 <input type="text" name="floating_email" id="floating_email"
-                    class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:border-gray-600 dark:focus:border-green-600 focus:outline-none focus:ring-0 focus:border-green-600 peer  "
+                    class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none  focus:outline-none focus:ring-0 focus:border-green-600 peer rounded-md  "
                     placeholder="" required formControlName="city" />
                 <label for="floating_email"
                     class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto peer-focus:text-green-600 peer-focus:dark:text-green-600 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">City
@@ -32,7 +32,7 @@
             <!-- & phone  -->
             <div class="relative z-0 w-full mb-5 group">
                 <input type="tel" name="floating_password" id="floating_password"
-                    class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:border-gray-600 dark:focus:border-green-600 focus:outline-none focus:ring-0 focus:border-green-600 peer"
+                    class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none  focus:outline-none focus:ring-0 focus:border-green-600 peer rounded-md"
                     placeholder="" required formControlName="phone" />
                 <label for="floating_password"
                     class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-green-600 peer-focus:dark:text-green-600 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Phone
@@ -59,7 +59,7 @@
             <!-- & details  -->
             <div class="relative z-0 w-full mb-5 group">
                 <textarea type="text" name="floating_password" id="floating_password"
-                    class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:border-gray-600 dark:focus:border-green-600 focus:outline-none focus:ring-0 focus:border-green-600 peer"
+                    class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none  focus:outline-none focus:ring-0 focus:border-green-600 peer rounded-md"
                     placeholder="" required formControlName="details"></textarea>
                 <label for="floating_password"
                     class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-green-600 peer-focus:dark:text-green-600 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Details</label>
@@ -86,9 +86,9 @@
 
 
             <!-- & Btn Submit -->
-            <div class="flex justify-between items-center sm:row-auto">
+            <div class="flex justify-between items-center flex-col md:flex-row ">
                 <button [disabled]="payForm.invalid" type="button" (click)="onSubmit('cash')"
-                    class="disabled:!bg-green-400 disabled:!cursor-progress text-white bg-green-600 block mx-auto  hover:bg-green-900   font-medium rounded-lg text-sm w-60 my-4 px-5 py-2.5 text-center">
+                    class="disabled:!bg-green-400 disabled:!cursor-progress text-white bg-green-600 block mx-auto  hover:bg-green-900   font-medium rounded-lg text-sm w-60 my-1 md:my-4 px-5 py-2.5 text-center">
 
 
                     Cash Payment
@@ -96,7 +96,7 @@
 
                 </button>
                 <button [disabled]="payForm.invalid " type="button" (click)="onSubmit('online')"
-                    class="disabled:!bg-green-400   disabled:!cursor-progress text-white bg-green-600 block mx-auto  hover:bg-green-900   font-medium rounded-lg text-sm w-60 my-4 px-5 py-2.5 text-center">
+                    class="disabled:!bg-green-400   disabled:!cursor-progress text-white bg-green-600 block mx-auto  hover:bg-green-900   font-medium rounded-lg text-sm w-60 my-1 md:my-4 px-5 py-2.5 text-center">
 
                     Online Payment
                     <i class="fa-solid fa-credit-card mx-2 text-lg"></i>
