--- a/src/app/pages/main-layout/wish-list/wish-list.component.html
+++ b/src/app/pages/main-layout/wish-list/wish-list.component.html
@@ -10,12 +10,11 @@
                 <div class="space-y-6">
                     @for (product of allWishListProducts.data; track $index) {
                     <div class="rounded-lg border border-gray-200 bg-white p-4 shadow-sm md:p-6">
-                        <div class="space-y-4 md:flex md:items-center md:justify-between md:gap-6 md:space-y-0">
-                            <a href="#" class="shrink-0 md:order-1">
+                        <div class="space-y-4 flex  md:items-center md:justify-between md:gap-6 md:space-y-0 flex-col md:flex-row justify-center items-center ">
+                            <a class="shrink-0 md:order-1">
                                 <img class="h-20 w-20 block object-cover" [src]="product.imageCover" alt="imac image" />
                             </a>
 
-                           
                             <div class="flex items-center justify-between md:order-3 md:justify-end">
                             
                                 <div class="text-end md:order-4 md:w-32">
@@ -23,11 +22,11 @@
                                 </div>
                             </div>
 
-                            <div class="w-full min-w-0 flex-1 space-y-4 md:order-2 md:max-w-md">
-                                <a href="#"
-                                    class="text-base font-bold text-gray-900 ">{{product.title}}</a>
+                            <div class="w-full min-w-0 flex-1 space-y-4 md:order-2 md:max-w-md text-center">
+                                <a 
+                                    class="text-base font-bold text-gray-900 my-4 inline-block">{{product.title}}</a>
 
-                                <div class="flex items-center gap-4">
+                                <div class="flex items-center gap-4 justify-center">
                                     <button type="button" (click)="addToCart(product._id)"
                                         class="inline-flex items-center text-sm font-bold text-gray-500 hover:text-gray-900 hover:bg-gray-100 p-3 rounded">
                                         <i class="fa-solid fa-cart-shopping mx-2"></i>
@@ -49,8 +48,8 @@
                         </div>
                     </div>
                     } @empty {
-                    <div id="alert-additional-content-1"
-                        class="p-4 mb-4 text-green-800 border border-green-300 rounded-lg bg-green-50" role="alert">
+                    <div id="alert-additional-content-1 "
+                        class="p-4 mb-4 text-green-800 border border-gray-100 rounded-lg bg-gray-50 shadow-md flex justify-center items-center flex-col " role="alert">
                         <div class="flex items-center">
                             <svg class="shrink-0 w-4 h-4 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
                                 fill="currentColor" viewBox="0 0 20 20">
@@ -58,19 +57,15 @@
                                     d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z" />
                             </svg>
                             <span class="sr-only">Info</span>
-                            <h3 class="text-lg font-medium">Your cart is empty. Please add items before</h3>
+                            <h3 class="text-lg font-semibold">Your wish list is empty. Please add items before</h3>
                         </div>
                         <div class="mt-2 mb-4 text-sm">
 
                         </div>
-                        <div class="flex">
+                        <div class="flex w-full px-8 py-2 text-center">
                             <button type="button" routerLink="/products"
-                                class="text-white bg-green-600 hover:bg-green-700 focus:ring-4 focus:outline-none focus:ring-green-200 font-medium rounded-lg text-xs px-3 py-1.5 me-2 text-center inline-flex items-center">
-                                <svg class="me-2 h-3 w-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                                    fill="currentColor" viewBox="0 0 20 14">
-                                    <path
-                                        d="M10 0C4.612 0 0 5.336 0 7c0 1.742 3.546 7 10 7 6.454 0 10-5.258 10-7 0-1.664-4.612-7-10-7Zm0 10a3 3 0 1 1 0-6 3 3 0 0 1 0 6Z" />
-                                </svg>
+                                class="text-white bg-green-600 hover:bg-green-500  focus:outline-none w-full font-medium rounded-md text-sm px-5 py-3 me-2   items-center">
+
                                 Products
                             </button>
                         </div>
